dark mode correction

--- a/assets/css/mode/stylemode.css
+++ b/assets/css/mode/stylemode.css
@@ -252,6 +252,10 @@
     box-shadow: inset 0 2px 0 rgba(255,255,255,0.06);
 }
 
+.dark .service-types h4{
+    box-shadow: none;
+}
+
 .dark .service-content{
     background-color: #091127;
 }
